--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Wasschema2</title>
+  <title>Woongebouw Parkhaven - Wasschema</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,11 +12,11 @@
         rel="stylesheet">
 
   <link href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css" rel="stylesheet">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#1976d2">
 </head>
 <body>
 <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
